--- a/style.css
+++ b/style.css
@@ -1,6 +1,35 @@
+* {box-sizing:border-box;}
+
+body {
+  margin:0;
+  /*
+  background-image: url(images/background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  */
+  height:100vh;
+}
+
+nav {
+  height: 17vh;
+}
+
+#game-board {
+  width: 100%;
+  margin: 0 auto;
+}
+
 canvas {
-  border: 1px solid black;
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 0;
+  margin: auto;
+  display: block;
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border: 1px solid;
 }
