--- a/style.css
+++ b/style.css
@@ -1,18 +1,71 @@
 * {box-sizing:border-box;}
 
-body {
+/*START SCREEN*/
+.startScreen {
+  padding: 0;
+  margin: auto;
+  display: block;
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  
+  z-index: 1;
+}
+
+img {
+  height: 200px;
+}
+
+.button {
+  font-family: 'FR73 Pixel W00 Regular', sans-serif;
+  color:black;
+  font-size: 24px;
+  background: white;
+  padding: 0.3rem 3.4rem;
+  border: 3px solid black;
+  box-shadow: 0 0 0 black;
+  transition: all 0.2s;
+
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.button:hover {
+  box-shadow: 0.4rem 0.4rem 0 black;
+  transform: translate(-0.4rem, -0.4rem);
+}
+
+.button:active {
+  box-shadow: 0 0 0 black;
+  transform: translate(0, 0);
+}
+
+.button :before {
+  content: '';
+    position: absolute;
+    z-index: -1;
+    top: 12px;
+    left: -14px;
+    width: calc(100% + 6px);
+    height: calc(100% + 6px);
+    background-color: #f9d159;
+    transition: all .3s ease;
+}
+
+/*CANVAS*/
+.background-game {
   margin:0;
-  /*
   background-image: url(images/background.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  */
+  background-color: white;
   height:100vh;
-}
-
-nav {
-  height: 17vh;
 }
 
 #game-board {
